# solta

./: .gitignore  LICENSE  README.md  RELEASE.md  ROADMAP.md  TECHNICAL_ROADMAP.md  pyproject.toml
examples/: getting_started.py
solta/: __init__.py
solta/core/: __init__.py  agent.py  ai_providers.py  client.py  decorators.py  default_router.py  loader.py  router.py  tools.py
solta/examples/basic_agent/: __init__.py  agent.py  setup.py  tools.py
solta/examples/multi_agent_demo/: main.py
solta/examples/multi_agent_demo/calculator_agent/: __init__.py  agent.py  tools.py
solta/examples/multi_agent_demo/memory_agent/: __init__.py  agent.py  tools.py
