[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solta"
version = "0.0.3"
authors = [
  { name="Jason W." },
]
description = "A framework for building AI agents with Ollama"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "watchdog>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/username/solta"
"Bug Tracker" = "https://github.com/username/solta/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -ra -q"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.coverage.run]
source = ["solta"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]
